# NavaAIOps

./: .gitignore  ADVANCED_FEATURES.md  AI_SRE_AGENT.md  ARCHITECTURE.md  ARCHITECTURE_QUICK_REFERENCE.md  CANARY_DEPLOYMENT.md  CLOUD_IMPLEMENTATION_COMPLETE.md  CLOUD_NATIVE_ARCHITECTURE.md  CMDP_ARCHITECTURE.md  COMPLETE_ARCHITECTURE.md  CUSTOM_MODEL_INTEGRATED.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile.sagemaker  Dockerfile.scraper  FEATURES.md  FEATURES_COMPLETE.md  FINAL_SOTA_FEATURES.md  FINETUNING_COMPLETE.md  FINETUNING_GUIDE.md  FINETUNING_READY.md  FINETUNING_STATUS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  IRONCLAD_IMPLEMENTATION.md  NAVACHAIN_IMPLEMENTATION.md  P0_FEATURES.md  P1_FEATURES.md  PRODUCTION_READINESS.md  PRODUCTION_SETUP.md  PROJECT_ARCHITECTURE.md  QUICK_START.md  README.md  README_FINETUNING.md  REALITY_CHECK.md  ROADMAP.md  RUNNING.md  SOTA_FEATURES_IMPLEMENTED.md  SOTA_FEATURES_PLAN.md  (+13 more)
benchmarks/: ironclad-loop.js
data/: training-data.jsonl
lib/rust/ledger-sync/: Cargo.toml
lib/rust/ledger-sync/src/: main.rs
lib/rust/trust-interceptor/: Cargo.toml
lib/rust/trust-interceptor/src/: lib.rs
nava-contracts/solidity/: AuditLedger.sol  hardhat.config.js  package.json
precognitor/: Cargo.toml
precognitor/src/: main.rs
prisma/: schema.postgres.prisma  schema.prisma
prisma/db/: custom.db
scraper/: Cargo.toml
scraper/src/: main.rs
scripts/: create-sample-training-data.ts  create-test-incident.ts  deploy-contract.sh  fine-tune-model.py  fine-tune-model.sh  fine-tune-sre-complete.py  migrate-to-postgres.ts  prepare-training-data.ts  seed-policies.ts  seed-remediation-scripts.ts  verify-startup.ts
server/inference/: DEPLOYMENT_GUIDE.md  Dockerfile  (+12 more)
src/: middleware.ts
tests/: setup.ts
(+185 files in other folders)
