[package]
name = "nava-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ethers = { version = "2.0", features = ["ws", "http", "rustls"] }
sha2 = { version = "0.10", features = ["oid"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
kubo-rpc-client = "0.4"
hex = "0.4"
anyhow = "1.0"
thiserror = "1.0"
dotenv = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 8
strip = true
