[package]
name = "trust-interceptor"
version = "0.1.0"
edition = "2021"

[lib]
name = "trust_interceptor"
crate-type = ["cdylib", "rlib"]

[dependencies]
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 8
strip = true
